--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import 'mixins';
 @import 'common';
 @import 'scriptStyles';
+@import 'slider/slider';
 @import 'pageSections/navbar';
 @import 'pageSections/promo';
 @import 'pageSections/offer';
