--- a/src/scss/slider/slider.scss
+++ b/src/scss/slider/slider.scss
@@ -1,22 +1,37 @@
 @import '../variables';
 @import '../mixins';
+@import '../common';
 
 .slider {
   @include block-border-box;
   @include set-to-zero;
-  width: 100%;
   position: relative;
-  background-color: magenta;
+  width: 100%;
 
   .nav {
     @include pos-absolute(5);
-    padding-bottom: 1em;
+
+    box-sizing: border-box;
     display: inline-block;
-    text-align: center;
+    text-align: right;
+    padding: 3em 4em;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: yellow;
+
+    .current,
+    .all {
+      display: inline-block;
+      padding: 0 .5em;
+      font-size: 1.1em;
+    }
+
+    .of {
+      @include vremya;
+      font-style: italic;
+      font-size: 1.1em;
+    }
+
   }
 
   .prev {
@@ -24,7 +39,6 @@
     top: 40%;
     left: 2%;
     font-size: 2em;
-    background-color: orange;
   }
 
   .next {
@@ -32,7 +46,6 @@
     top: 40%;
     right: 2%;
     font-size: 2em;
-    background-color: orange;
   }
 
   .slider-view {
@@ -51,12 +64,14 @@
     height: 700px;
     font-size: 0;
     width: 100%;
-    overflow: hidden;
 
     .slide {
       @include set-to-zero;
+      font-size: 1rem;
+      background-color: #f5f5f5;
       box-sizing: border-box;
       display: inline-block;
+      position: relative;
       vertical-align: top;
       text-align: left;
       white-space: normal;
@@ -65,9 +80,38 @@
 
       .image {
         height: 100%;
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: 0;
+      }
+
+      .info {
+        font-size: 1em;
+        position: absolute;
+        z-index: 2;
+        top: 45%;
+        right: 0;
+        height: 50%;
+        width: 50%;
+
+        .info-title {
+          @include set-to-zero;
+          text-transform: uppercase;
+          display: block;
+          height: 2em;
+          font-size: 1.5em;
+          letter-spacing: 2px;
+          font-weight: normal;
+        }
+
+        .info-description {
+          display: block;
+          font-size: 1em;
+        }
+
       }
 
     }
   }
-
 }
