--- a/src/scss/slider/slider.scss
+++ b/src/scss/slider/slider.scss
@@ -101,7 +101,7 @@
         left: 10%;
         height: 60%;
         width: 80%;
-        background-color: rgba(245, 245, 245, 0.5);
+        background-color: rgba(245, 245, 245, .5);
 
         @media screen {
           @media (min-width: $media-br-1) {
