--- a/src/scss/pageSections/offer.scss
+++ b/src/scss/pageSections/offer.scss
@@ -81,6 +81,11 @@
         .new-info {
           font-size: 1.5em;
           float: left;
+          visibility: inherit;
+
+          &.hidden {
+            visibility: hidden;
+          }
         }
       }
 
