--- a/src/scss/pageSections/offer.scss
+++ b/src/scss/pageSections/offer.scss
@@ -55,6 +55,10 @@
         color: $lightest-text;
         float: right;
         padding-top: 2em;
+
+        & span {
+          margin: 0 .1em;
+        }
       }
 
     }
@@ -155,6 +159,7 @@
           display: inline-block;
           padding: .5em 1em;
           color: $lighter-text;
+          cursor: pointer;
 
           &.active {
             color: $text-color;
@@ -163,6 +168,7 @@
       }
 
       span {
+        cursor: pointer;
         display: block;
         float: right;
         font-weight: 700;
@@ -172,5 +178,4 @@
       }
     }
   }
-
 }
