--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,9 +2,8 @@
 @import 'variables';
 @import 'mixins';
 @import 'common';
-@import 'scriptStyles';
-@import 'slider/slider';
 @import 'pageSections/navbar';
 @import 'pageSections/promo';
 @import 'pageSections/offer';
 @import 'pageSections/footer';
+@import 'components/components';
