--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'mixins';
 @import 'utils/fonts';
 
 @include custom-font-mixin('Roboto Condensed', 'robotocondensed-light', 300, normal, $path-roboto-condensed);
@@ -35,4 +36,14 @@ ul {
   width: 90%;
   max-width: 1850px;
   margin: 0 auto;
+}
+
+.small-title {
+  padding: .5em 0;
+  font-weight: 400;
+  font-size: 1.3em;
+}
+
+.ordinary-list {
+  @extend %list-template;
 }
