--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -45,5 +45,19 @@ ul {
 }
 
 .ordinary-list {
-  @extend %list-template;
+  padding: 0 0 1.5em;
+
+  li {
+    @include selected;
+    user-select: none;
+    display: block;
+    cursor: pointer;
+    width: 100%;
+    padding-bottom: .5em;
+    color: $lighter-text;
+
+    sup {
+      color: $lightest-text;
+    }
+  }
 }
