--- a/src/scss/components/tags/tags.scss
+++ b/src/scss/components/tags/tags.scss
@@ -3,11 +3,15 @@
 @import '../../common';
 
 .tags-list {
-  @extend %list-template;
+  padding: 0 0 1.5em;
 
-  & > li {
+  li {
+    @include selected;
+    user-select: none;
     width: auto;
     display: inline-block;
+    padding-bottom: .5em;
+    color: $lighter-text;
 
     &:last-of-type {
       &::after {
