--- a/src/scss/components/components.scss
+++ b/src/scss/components/components.scss
@@ -6,3 +6,4 @@
 @import './pageSelector/pageSelector';
 @import './productsCount/productsCount';
 @import 'productFilter/productFilter';
+@import 'basketSmall/basketSmall';
