--- a/src/scss/components/tags/tags.scss
+++ b/src/scss/components/tags/tags.scss
@@ -9,6 +9,7 @@
     @include selected;
     user-select: none;
     width: auto;
+    cursor: pointer;
     display: inline-block;
     padding-bottom: .5em;
     color: $lighter-text;
