--- a/src/scss/pageSections/offer.scss
+++ b/src/scss/pageSections/offer.scss
@@ -95,6 +95,7 @@
         display: block;
         float: right;
         font-size: 1.1em;
+        cursor: pointer;
 
         i {
           margin-right: .25em;
