--- a/src/scss/components/basketSmall/basketSmall.scss
+++ b/src/scss/components/basketSmall/basketSmall.scss
@@ -11,20 +11,24 @@
   position: relative;
 
   .items-in-basket {
-    display: block;
+    @include block-border-box;
+    @include set-to-zero;
     background-color: white;
-    box-sizing: border-box;
-    margin: 0;
     border: 2px solid black;
     border-radius: 50%;
     position: absolute;
-    width: 22px;
-    height: 22px;
+    width: 24px;
+    height: 24px;
     right: 10%;
     bottom: 10%;
     font-weight: bolder;
-    font-size: .37em;
+    font-size: 12px;
     text-align: center;
+    padding-top: 1px;
+
+    &.hidden {
+      visibility: hidden;
+    }
   }
 
   @media screen {
