--- a/src/scss/components/components.scss
+++ b/src/scss/components/components.scss
@@ -7,3 +7,4 @@
 @import './productsCount/productsCount';
 @import 'productFilter/productFilter';
 @import 'basketSmall/basketSmall';
+@import 'basketFull/basketFull';
