--- a/src/scss/components/components.scss
+++ b/src/scss/components/components.scss
@@ -8,3 +8,4 @@
 @import 'productFilter/productFilter';
 @import 'basketSmall/basketSmall';
 @import 'basketFull/basketFull';
+@import 'itemDisplayFull/itemDisplayFull';
