--- a/src/scss/components/components.scss
+++ b/src/scss/components/components.scss
@@ -9,3 +9,4 @@
 @import 'basketSmall/basketSmall';
 @import 'basketFull/basketFull';
 @import 'itemDisplayFull/itemDisplayFull';
+@import 'otherPages/pages';
