--- a/src/scss/pageSections/offer.scss
+++ b/src/scss/pageSections/offer.scss
@@ -116,6 +116,12 @@
         border: 2em solid white;
         border-right: 0;
         border-bottom: 0;
+
+        a {
+          font-size: 1.5em;
+          text-decoration: none;
+        }
+
       }
 
       img {
