--- a/src/scss/components/basketFull/basketFull.scss
+++ b/src/scss/components/basketFull/basketFull.scss
@@ -72,6 +72,10 @@
     width: 40%;
     float: left;
 
+    a {
+      text-decoration: none;
+    }
+
     .item-name {
       width: 100%;
       font-size: 1.5em;
