--- a/src/scss/components/priceFilter/priceFilter.scss
+++ b/src/scss/components/priceFilter/priceFilter.scss
@@ -5,6 +5,12 @@
 .price-filter {
   width: 100%;
 
+  .reset-wrapper {
+    width: 90%;
+    margin: 0 auto;
+    padding: 0 0 1.5em;
+  }
+
   .inputs-row {
     width: 90%;
     margin: 0 auto;
