--- a/src/scss/pageSections/offer.scss
+++ b/src/scss/pageSections/offer.scss
@@ -29,6 +29,21 @@
       font-weight: 400;
       letter-spacing: 3px;
     }
+
+    .reset-wrapper {
+      padding-bottom: 1.5em;
+    }
+
+    .reset-button {
+      font-size: 1em;
+      outline: 0;
+      background-color: $background-color;
+      color: $lighter-text;
+      border: 1px solid $border-color;
+      padding: .2em .3em;
+      cursor: pointer;
+    }
+
   }
 
   .main-element {
