--- a/src/scss/pageSections/promo.scss
+++ b/src/scss/pageSections/promo.scss
@@ -16,19 +16,38 @@
     @include block-border-box;
     @include vremya;
     float: left;
-    width: 50%;
+    width: 100%;
     font-style: italic;
-    font-size: 3em;
-    padding: 2em 0;
+    font-size: 2em;
+    padding: 2em 0 0;
     font-weight: 400;
     text-align: center;
+
+    @media screen {
+      @media (min-width: $media-br-1) {
+        width: 50%;
+        padding: 2em 0;
+        font-size: 3em;
+      }
+    }
+
+
   }
 
   form {
     @include block-border-box;
     float: right;
-    width: 50%;
+    width: 100%;
     overflow: hidden;
+    padding-bottom: 2em;
+
+    @media screen {
+      @media (min-width: $media-br-1) {
+        width: 50%;
+        padding: 0;
+      }
+    }
+
 
     &::after {
       clear: both;
@@ -36,11 +55,17 @@
 
     input {
       @include block-border-box;
-      font-size: 1.5em;
+      font-size: 1em;
       padding: .5em 1em;
       outline: 0;
       float: left;
       margin-top: 4em;
+
+      @media screen {
+        @media (min-width: $media-br-1) {
+          font-size: 1.5em;
+        }
+      }
 
       &[type='text'] {
         border: 3px solid $border-color;
