--- a/src/scss/components/pageSelector/pageSelector.scss
+++ b/src/scss/components/pageSelector/pageSelector.scss
@@ -23,7 +23,7 @@
     li {
       font-size: 1.2em;
       display: inline-block;
-      padding: .5em .5em;
+      padding: .5em;
       color: $lighter-text;
       cursor: pointer;
 
